# SD-Finder_bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
src/app/: bot.py
src/config/: __init__.py  config.py  messages.yaml
src/routers/: callbacks.py  commands.py  schemas.py
src/services/: base.py  finder.py  system.py
src/utils/: markup.py
